[package]
name = "bevy-client"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.14.2"
env_logger = "0.11.6"
valence_protocol = { git = "https://github.com/georgik/valence.git", branch = "main", features = ["compression"] }
tokio = { version = "1.43.0", features = [ "macros", "rt-multi-thread", "sync"]  }